--- a/.github/workflows/pipeline.js.yml
+++ b/.github/workflows/pipeline.js.yml
@@ -13,14 +13,15 @@ jobs:
     
     steps:
     - uses: actions/checkout@v4
-    - name: Use Node.js 22
+    
+    - name: Set up Node.js
       uses: actions/setup-node@v4
-   
       with:
-        node-version: 22
-        cache: 'npm'
+        node-version: '22.9.0'
+        
     - name: Install dependencies
       run: npm install
+      
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
