--- a/.github/workflows/pipeline.js.yml
+++ b/.github/workflows/pipeline.js.yml
@@ -21,7 +21,11 @@ jobs:
         
     - name: Install dependencies
       run: npm install
-      
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+
+    - name: Install Playwright Browsers
+      run: npx playwright install --with-deps
+
+    - name: Run Playwright tests
+      run: npx playwright test --headless
+
+   
