--- a/.github/workflows/pipeline.js.yml
+++ b/.github/workflows/pipeline.js.yml
@@ -23,7 +23,13 @@ jobs:
       run: npm install
 
     - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
+      run: npx playwright install 
+
+    - name: Start backend
+      run:  npm run start:be
+     
+    - name: Start frontend
+      run:  npm run start:fe
 
     - name: Run Playwright tests
       run: npx playwright test 
