--- a/.github/workflows/pipeline.js.yml
+++ b/.github/workflows/pipeline.js.yml
@@ -20,7 +20,7 @@ jobs:
         node-version: '22.9.0'
         
     - name: Install dependencies
-      run: npm install
+      run: npm ci
 
     - name: Install Playwright Browsers
       run: npx playwright install 
