--- a/.github/workflows/pipeline.js.yml
+++ b/.github/workflows/pipeline.js.yml
@@ -37,4 +37,24 @@ jobs:
     - name: Run UI tests
       run: npx playwright test 
 
+  deploy-be:
+    needs: build_test
+    runs-on: ubuntu-latest
+    steps:
+        - uses: actions/checkout@v3
+        - uses: JorgeLNJunior/render-deploy@v1.4.4
+          with:
+            service_id: ${{ secrets.RENDER_SERVICE_BE_ID }}
+            api_key: ${{ secrets.RENDER_API_KEY }}
+            wait_deploy: true
+  deploy-fe:
+    needs: build_test
+    runs-on: ubuntu-latest
+    steps:
+        - uses: actions/checkout@v3
+        - uses: JorgeLNJunior/render-deploy@v1.4.4
+          with:
+            service_id: ${{ secrets.RENDER_SERVICE_FE_ID }}
+            api_key: ${{ secrets.RENDER_API_KEY }}
+            wait_deploy: true
    
