--- a/.github/workflows/pipeline.js.yml
+++ b/.github/workflows/pipeline.js.yml
@@ -42,7 +42,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Update the config 
-      run: echo "export const settings = {host:\"https://ci-cd-librarycatalog.onrender.com"}" > src/config.js
+      run: echo "export const settings = {host:\"https://ci-cd-librarycatalog.onrender.com"} > src/config.js
     - uses: actions/checkout@v3
     - uses: JorgeLNJunior/render-deploy@v1.4.4
       with:
